--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h2>Welcome to Vehicle Record System</h2>
     <a href="form.html">Go to Vehicle Registration</a>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <h2>Vehicle List</h2>
     <table border="1">
