--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
 <head>
     <title>Vehicle Record System</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Moved CSS link to head -->
 </head>
 <body>
     <h2>Welcome to Vehicle Record System</h2>
     <a href="form.html">Go to Vehicle Registration</a>
-    <link rel="stylesheet" type="text/css" href="style.css">
 
     <h2>Vehicle List</h2>
     <table border="1">
