--- a/form.html
+++ b/form.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Vehicle Registration</title>
+    <link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 <body>
     <h2>Register a Vehicle</h2>
