--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <?php include 'db.php'; ?>
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Record System</title>
-    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Moved CSS link to head -->
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Linking the modern CSS -->
 </head>
 <body>
-    <h2>Welcome to Vehicle Record System</h2>
-    <a href="form.html">Go to Vehicle Registration</a>
+    <div class="container">
+        <h2>Welcome to Vehicle Record System</h2>
+        <a href="form.html" class="btn">Go to Vehicle Registration</a>
 
-    <h2>Vehicle List</h2>
-    <table border="1">
-        <tr>
-            <th>Plate Number</th>
-            <th>Model</th>
-            <th>Color</th>
-            <th>Owner Name</th>
-            <th>Registration Date</th>
-        </tr>
-        <?php
-        $result = $conn->query("SELECT * FROM vehicles");
-        while ($row = $result->fetch_assoc()) {
-            echo "<tr>
-                    <td>{$row['plate_number']}</td>
-                    <td>{$row['model']}</td>
-                    <td>{$row['color']}</td>
-                    <td>{$row['owner_name']}</td>
-                    <td>{$row['registration_date']}</td>
-                  </tr>";
-        }
-        ?>
-    </table>
+        <h2>Vehicle List</h2>
+        <div class="table-container">
+            <table>
+                <tr>
+                    <th>Plate Number</th>
+                    <th>Model</th>
+                    <th>Color</th>
+                    <th>Owner Name</th>
+                    <th>Registration Date</th>
+                </tr>
+                <?php
+                $result = $conn->query("SELECT * FROM vehicles");
+                while ($row = $result->fetch_assoc()) {
+                    echo "<tr>
+                            <td>{$row['plate_number']}</td>
+                            <td>{$row['model']}</td>
+                            <td>{$row['color']}</td>
+                            <td>{$row['owner_name']}</td>
+                            <td>{$row['registration_date']}</td>
+                          </tr>";
+                }
+                ?>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
